refactor: update code to remove boiler plate code to create and validate jwt token